--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ python:
 install:
   - "pip install -r requirements.txt"
 
-script:
+services:
   - redis-server
+
+script:
   - export TARGET="-m unittest discover tests test_*.py"
   - python $TARGET
